#7038 closed bug (fixed)
Network Settings fails on VirtualBox
Reported by: | yahd | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Network | Version: | R1/Development |
Keywords: | Network, VirtualBox, Ethernet | Cc: | |
Blocked By: | Blocking: | #5957, #7455 | |
Platform: | x86 |
Description
How to reproduce:
- Set VirtualBox Network Card to NAT mode
- In Haiku execute Preferences-Network Preferences
- Error message is shown
The application: /boot/system/preferences/Network has encountered an error <...>
Additional info:
[tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/preferences/Network (563) thread Network(563)] 0x00209022 in EthernetSettingsView::_ShowConfiguration()
Attachments (4)
Change History (14)
comment:1 by , 14 years ago
comment:3 by , 14 years ago
Component: | Network & Internet → Preferences/Network |
---|---|
Owner: | changed from | to
I can reproduce it in VirtualBox 3.0.12 when I disable network adapter or if I switch to an unsupported one (e.g. PCnet based). When network card is detected Network preflet doesn't crash. So it seems that absence of NIC is not handled properly.
Thread 224 caused an exception: Segment violation [...] [Switching to team /boot/system/preferences/Network (224) thread Network (224)] 0x00209022 in EthernetSettingsView::_ShowConfiguration () (gdb) bt #0 0x00209022 in EthernetSettingsView::_ShowConfiguration () #1 0x00209900 in EthernetSettingsView::AttachedToWindow () #2 0x0038b8aa in BView::_Attach () from /boot/system/lib/libbe.so #3 0x003929aa in BView::_AddChild () from /boot/system/lib/libbe.so #4 0x0032784e in BLayout::AddItem () from /boot/system/lib/libbe.so #5 0x0032179f in BGroupLayout::AddItem () from /boot/system/lib/libbe.so #6 0x003279e3 in BLayout::AddView () from /boot/system/lib/libbe.so #7 0x003217e9 in BGroupLayout::AddView () from /boot/system/lib/libbe.so #8 0x00326ad8 in BLayout::AddView () from /boot/system/lib/libbe.so #9 0x0032180c in BGroupLayout::AddView () from /boot/system/lib/libbe.so #10 0x00207edc in NetworkWindow::NetworkWindow () #11 0x00207c45 in NetworkApp::ReadyToRun () #12 0x002d08f9 in BApplication::DispatchMessage () from /boot/system/lib/libbe.so #13 0x002db2c4 in BLooper::task_looper () from /boot/system/lib/libbe.so #14 0x002d0eb4 in BApplication::Run () from /boot/system/lib/libbe.so #15 0x00207d81 in main () (gdb)
BTW: Several network drivers somehow appeared in Preferences -> Network component in Trac.
by , 14 years ago
Attachment: | Network_Preferences_bad_interface_no_crash.diff added |
---|
Checks to see if your first adapter exists before trying to load it, fixes crash, window opens with nothing filled in
comment:4 by , 14 years ago
patch: | 0 → 1 |
---|
by , 14 years ago
Attachment: | Screen shot of empty network preferences window.png added |
---|
Screen shot of the network preferences window after applying my patch
comment:5 by , 14 years ago
Blocking: | 7492 added |
---|
comment:7 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Committed in hrev41412. While this isn't a final solution (funky NAT Ethernet device not working needs a separate ticket), it will at least prevent an unexpected crash.
by , 14 years ago
Attachment: | Network_Preferences_bad_interface_no_crash_2.diff added |
---|
Put check for missing settings in _ShowConfiguration(). Check against NULL explicitly
by , 14 years ago
Attachment: | Screenshot of Network preferences no adapter fixed.png added |
---|
Screenshot of network preferences dialog with no adapter after Axel fixed it in hrev42196
comment:9 by , 14 years ago
Blocking: | 7455 added |
---|
comment:10 by , 12 years ago
Blocking: | 5957 added |
---|
I can confirm the same bug with the hrev39962 nighly build. Go to open network settings and it crashes before the window appears.