small workaround to prevent network preflet crashes on NAT network cards in VirtualBox and VMWare. Not a final solution but preventing a crash is always a plus. resolves #7038.  Thanks Skipp_OSX!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41412 a95241bf-73f2-0310-859d-f6bbb57e9c96